src/index.css
@import url(https://fonts.googleapis.com/css?family=Satisfy); 
@import url(https://fonts.googleapis.com/css?family=Six+Caps);
@import url(https://fonts.googleapis.com/css?family=Nabla);
@import url(https://fonts.googleapis.com/css?family=Teko);
@import url(https://fonts.googleapis.com/css?family=Oswald);

* {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.bgContainer {
  
  width: 100%;
  height: 100vh;
}

video {
  
  position: fixed;
  width: 100%;
  height: 100%;
  object-fit: cover;
  
}

.overlay {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  
  
}

.OverlayContainer {
  position: absolute;
  width: 90vw;
  display: flex;
  flex-direction: column;
  overflow-x: auto;
  margin: 2rem;
  gap: 20rem;
  z-index: 1;

}

span {
  position: relative;
  display: inline-block;
  font-family: 'Oswald';
  font-size: 190px;
  height: 230px;
  font-weight: bold;
  letter-spacing: 10px;
  line-height: 1;
  margin: 0px;
  color: white;
}

@media (max-width: 1057px) {
  span {
    font-size: 60px;
    height: 70px;
    letter-spacing: 3px;
  }
}

